--- a/E19039_Numpy_Implementation.ipynb
+++ b/E19039_Numpy_Implementation.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=pd.read_csv(\"C:/Users/tejas/Downloads/DeathPenalty.csv\")"
+    "data=pd.read_csv(\"C:/Users/asus/Desktop/ds praxis/dl/assignment/DeathPenalty.csv\")"
    ]
   },
   {
